# Aria2-for-pc

./: CMakeLists.txt  LICENSE  README.md  main.cpp  main.qml  qtquickcontrols2.conf
.github/workflows/: fakethunder.yml
Aria2/src/: Aria2.cpp
MaterialUI/: mainwindow.cpp
UI/: mainwindow.cpp  mainwindow.ui
src/: mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
